--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,1 +1,124 @@
-<p>landing works!</p>
+<nav class="navbar navbar-light fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="#">
+      LOGO
+    </a>
+  </div>
+</nav>
+<div class="container container-showcase-1">
+  <div class="row">
+    <div class="col-12 col-md-6 col-info">
+      <div class="col-info-title">
+        <p>Obtén tus paneles solares con <span class="color-lup--yellow">0</span> pesos</p>
+      </div>
+      <div class="col-info-subtitle">
+        Financiando con nosotros tu proyecto
+      </div>
+      <button class="lup-btn">conoce más</button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-md-6 font-29">
+      <span class="color-lup--yellow">¿Qué esperas</span><span class="color-lup--violet"> para conocernos?</span>
+    </div>
+  </div>
+</div>
+<div class="container container-showcase-2 text-center">
+  <div class="row">
+    <div class="col-12 color-lup--violet container-showcase-2__title">
+      Realizamos la inversión necesaria para que tú aproveches los beneficios
+    </div>
+    <div class="col-12">
+      <p>En Evolti nos interesa impulsar un nuevo escenario para la<br/>
+      sostenibilidad, poniendo al alcance de todos una nueva forma de <br/>
+        desarrollar <span class="color-lup--yellow">proyectos solares.</span></p>
+    </div>
+    <div class="col-12">
+      Descubre que beneficios tenemos para ti
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-12 col-sm-6"></div>
+    <div class="col-12 col-sm-6">
+      <div class="color-lup--violet">Sin inversión inicial</div>
+      <div>
+        <p>Sabemos que cada peso cuenta, en Evolti<br/>
+          te ofrecemos obtener tu proyecto solar <br/>
+          <span class="color-lup--yellow">costo cero</span>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-sm-6">
+      <div class="color-lup--violet">Cero riesgo de instalación</div>
+      <div>
+        <p>Nos asguramos de contar con un instalador
+          confiable y seguro que garantice la más <span class="color-lup--yellow">alta calidad</span> de tus paneles
+        </p>
+      </div>
+    </div>
+    <div class="col-12 col-sm-6"></div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-sm-6">
+      <div class="color-lup--violet">Cero riesgo de instalación</div>
+      <div>
+        <p>Nos asguramos de contar con un instalador
+          confiable y seguro que garantice la más <span class="color-lup--yellow">alta calidad</span> de tus paneles
+        </p>
+      </div>
+    </div>
+    <div class="col-12 col-sm-6"></div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-sm-6">
+      <div class="color-lup--violet">Cero riesgo de instalación</div>
+      <div>
+        <p>Nos asguramos de contar con un instalador
+          confiable y seguro que garantice la más <span class="color-lup--yellow">alta calidad</span> de tus paneles
+        </p>
+      </div>
+    </div>
+    <div class="col-12 col-sm-6"></div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-sm-6"></div>
+    <div class="col-12 col-sm-6">
+      <div class="color-lup--yellow">
+        Facilidades económicas<br/>en tu factura de energía
+      </div>
+      <div>
+        <p>Además de obtener los paneles, queremos presentarte una alternativa que traerá los mayores beneficios <span class="color-lup--yellow">a tu bolsillo</span></p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <div class="color-lup--violet">
+        Con evolti da el siguiente paso <br/>para conventirte en un amigo<br/>del planeta
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+  Launch static backdrop modal
+</button>
+
+<!-- Modal -->
+<div class="modal" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-fullscreen">
+    <div class="modal-content">
+      <div class="modal-animation">
+        <div class="title">
+          Bienvenido a
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
