landing almost complete

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,24 +1,30 @@
 <nav class="navbar navbar-light fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#">
-      LOGO
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+        Launch static backdrop modal
+      </button>
+
+
     </a>
   </div>
 </nav>
+
 <div class="container container-showcase-1">
   <div class="row">
-    <div class="col-12 col-md-6 col-info">
-      <div class="col-info-title">
+    <div class="col-12 col-md-6 container-showcase-1__col">
+      <div class="container-showcase-1__title">
         <p>Obtén tus paneles solares con <span class="color-lup--yellow">0</span> pesos</p>
       </div>
-      <div class="col-info-subtitle">
+      <div class="container-showcase-1__subtitle">
         Financiando con nosotros tu proyecto
       </div>
       <button class="lup-btn">conoce más</button>
     </div>
   </div>
   <div class="row">
-    <div class="col-12 col-md-6 font-29">
+    <div class="col-12 col-md-6 container-showcase-1__question">
       <span class="color-lup--yellow">¿Qué esperas</span><span class="color-lup--violet"> para conocernos?</span>
     </div>
   </div>
@@ -28,96 +34,148 @@
     <div class="col-12 color-lup--violet container-showcase-2__title">
       Realizamos la inversión necesaria para que tú aproveches los beneficios
     </div>
-    <div class="col-12">
-      <p>En Evolti nos interesa impulsar un nuevo escenario para la<br/>
-      sostenibilidad, poniendo al alcance de todos una nueva forma de <br/>
+    <div class="col-12 container-showcase-2__subtitle">
+      <p>En <span class="color-lup--violet">Evolti</span> nos interesa impulsar un nuevo escenario para la
+      sostenibilidad, poniendo al alcance de todos una nueva forma de
         desarrollar <span class="color-lup--yellow">proyectos solares.</span></p>
     </div>
-    <div class="col-12">
-      Descubre que beneficios tenemos para ti
-    </div>
   </div>
 </div>
-<div class="container">
+<div class="container container-showcase-3">
+  <div class="row text-center">
+    <div class="col-12 container-showcase-3__title">
+      <p>
+        <span class="color-lup--violet-light">Descubre que beneficios tenemos </span>
+        <span class="color-lup--yellow">para ti</span>
+      </p>
+    </div>
+  </div>
   <div class="row">
     <div class="col-12 col-sm-6"></div>
     <div class="col-12 col-sm-6">
-      <div class="color-lup--violet">Sin inversión inicial</div>
-      <div>
-        <p>Sabemos que cada peso cuenta, en Evolti<br/>
-          te ofrecemos obtener tu proyecto solar <br/>
-          <span class="color-lup--yellow">costo cero</span>
+      <div class="color-lup--violet container-showcase-3__title">Sin inversión inicial</div>
+      <div class="container-showcase-3__subtitle">
+        <p>Sabemos que cada peso cuenta, en Evolti
+          te ofrecemos obtener tu proyecto solar
+          <span class="color-lup--yellow"><b>costo cero</b></span>
         </p>
       </div>
     </div>
   </div>
   <div class="row">
-    <div class="col-12 col-sm-6">
-      <div class="color-lup--violet">Cero riesgo de instalación</div>
-      <div>
-        <p>Nos asguramos de contar con un instalador
+    <div class="col-12 col-sm-6 text-end">
+      <div class="color-lup--violet container-showcase-3__title">
+        Cero riesgo de instalación
+      </div>
+      <div class="container-showcase-3__subtitle">
+        <p>Nos aseguramos de contar con un instalador
           confiable y seguro que garantice la más <span class="color-lup--yellow">alta calidad</span> de tus paneles
         </p>
       </div>
     </div>
     <div class="col-12 col-sm-6"></div>
-  </div>
-  <div class="row">
-    <div class="col-12 col-sm-6">
-      <div class="color-lup--violet">Cero riesgo de instalación</div>
-      <div>
-        <p>Nos asguramos de contar con un instalador
-          confiable y seguro que garantice la más <span class="color-lup--yellow">alta calidad</span> de tus paneles
-        </p>
-      </div>
-    </div>
-    <div class="col-12 col-sm-6"></div>
-  </div>
-  <div class="row">
-    <div class="col-12 col-sm-6">
-      <div class="color-lup--violet">Cero riesgo de instalación</div>
-      <div>
-        <p>Nos asguramos de contar con un instalador
-          confiable y seguro que garantice la más <span class="color-lup--yellow">alta calidad</span> de tus paneles
-        </p>
-      </div>
-    </div>
-    <div class="col-12 col-sm-6"></div>
-  </div>
-  <div class="row">
-    <div class="col-12 col-sm-6"></div>
-    <div class="col-12 col-sm-6">
-      <div class="color-lup--yellow">
-        Facilidades económicas<br/>en tu factura de energía
-      </div>
-      <div>
-        <p>Además de obtener los paneles, queremos presentarte una alternativa que traerá los mayores beneficios <span class="color-lup--yellow">a tu bolsillo</span></p>
-      </div>
-    </div>
   </div>
 </div>
-<div class="container">
+
+<div class="container container-showcase-4 text-center">
   <div class="row">
     <div class="col-12">
-      <div class="color-lup--violet">
-        Con evolti da el siguiente paso <br/>para conventirte en un amigo<br/>del planeta
+      <div class="color-lup--violet-light container-showcase-4__title">
+        Con evolti da el siguiente paso para conventirte en un amigo del planeta
+      </div>
+    </div>
+    <div class="col-12"></div>
+    <div class="col-12 color-lup--violet container-showcase-4__subtitle">
+      Cambiando la manera en que llega la energía a tu residencia
+    </div>
+  </div>
+</div>
+
+<div class="container container-showcase-5">
+  <div class="row text-center">
+    <div class="col-12 container-showcase-5__title" >
+      <span class="color-lup--yellow">¿Cómo </span> <span class="color-lup--violet-light">lo hacemos?</span>
+    </div>
+  </div>
+</div>
+<div class="container-fluid container-showcase-6">
+  <div class="row">
+    <div class="step-container">
+      <div class="step">
+        <div class="step__icon"></div>
+        <div class="step__text">
+          <div class="step__title">Analizamos la <br/>factibilidad del proyecto</div>
+          <div class="step__description">Al recibir tu solicitud a través de un estudio simple y rápido para ponernos en contacto</div>
+        </div>
+      </div>
+      <div class="step">
+        <div class="step__icon"></div>
+        <div class="step__text">
+          <div class="step__title">Evolti realizará la inversión de los paneles por ti</div>
+          <div class="step__description">Para que inicies con tu nueva energía sin demora</div>
+        </div>
+      </div>
+      <div class="step">
+        <div class="step__icon"></div>
+        <div class="step__text">
+          <div class="step__title">Garantizaremos la segura instalación del sistema solar</div>
+          <div class="step__description">Sin ningún riesgo y siempre a tu alcance</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row row-special-step row-special-step-violet">
+    <div class="row-special-step__header text-end">
+      ¿Y cómo se paga mi proyecto?
+    </div>
+    <div class="step-container">
+      <div class="step">
+        <div class="step__icon"></div>
+        <div class="step__text">
+          <div class="step__title">Durante una primera fase de operación, te proveeremos de energía más económica</div>
+          <div class="step__description">Tendrás un descuesto en la factura mensual, mientras compartes con evolti ese ahorro de energía</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row row-special-step row-special-step-white">
+    <div class="row-special-step__header text-end">
+      <p><span class="color-lup--yellow">¿Y después </span><span class="color-lup--violet-light">qué sigue?</span></p>
+    </div>
+    <div class="step-container">
+      <div class="step">
+        <div class="step__icon"></div>
+        <div class="step__text">
+          <div class="step__title">De ahí en adelante tú eres el dueño</div>
+          <div class="step__description">Disfrutando la energía limpia, renovable y gratuita del sol</div>
+        </div>
       </div>
     </div>
   </div>
 </div>
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-  Launch static backdrop modal
-</button>
+<div class="container-showcase-7 text-center">
+  <div class="row">
+    <div class="col-12 container-showcase-7__title">
+      En solo 3 pasos aplica para<br/>
+      iniciar con tu proyecto solar
+    </div>
+    <div class="col-12 container-showcase-7__subtitle">
+      ¿Listo para empezar con una nueva forma de hacer las cosas?
+    </div>
+    <div class="col-12">
+      <button class="lup-btn">¿Comenzamos?</button>
+    </div>
+  </div>
+</div>
+
 
 <!-- Modal -->
 <div class="modal" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-fullscreen">
     <div class="modal-content">
-      <div class="modal-animation">
-        <div class="title">
-          Bienvenido a
-        </div>
+      <div class="logo"></div>
+      <div class="text">
+        Bienvenido
       </div>
     </div>
   </div>
