--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -3,15 +3,13 @@
 // colours
 $lup-violet-dark: #460E8E
 $lup-violet: #500692
+$lup-violet-light: #7B2CBF
 $lup-yellow: #fea837
-
+$lup-dark-grey: #505050
 // fonts
 @font-face
   font-family: 'Montserrat-Bold'
   src: url('../assets/fonts/Montserrat-Bold.ttf') format("truetype")
-
-.font-29
-  font-size: 29px
 
 // buttons
 .lup-btn
@@ -28,6 +26,9 @@ $lup-yellow: #fea837
 
 .color-lup--violet
   color: $lup-violet-dark
+
+.color-lup--violet-light
+  color: $lup-violet-light
 
 .color-lup--yellow
   color: $lup-yellow
