--- a/src/app/landing/landing.component.sass
+++ b/src/app/landing/landing.component.sass
@@ -1,60 +1,41 @@
-
-
-.modal-animation
-  width: 100%
-  height: 100%
+.modal-content
   position: relative
-  -webkit-animation: color-change-2x 4s linear alternate both
-  animation: color-change-2x 4s linear alternate both
 
-@-webkit-keyframes color-change-2x
-  0%
-    background: rgb(154,76,218)
-    //background: linear-gradient(90deg, rgba(154,76,218,1) 0%, rgba(70,14,142,1) 100%)
-    //opacity: 1
+.logo
+  height: 100vh
+  width: 100vw
+  background: red
+  position: absolute
+  z-index: 1
 
-  100%
-    background: white
-    // opacity: 0
-
-
-@keyframes color-change-2x
-  0%
-    background: rgb(154,76,218)
-    // background: linear-gradient(90deg, rgba(154,76,218,1) 0%, rgba(70,14,142,1) 100%)
-    // opacity: 1
-
-  100%
-    background: white
-    // opacity: 0
-
-
-.title
+.text
   display: flex
   align-items: center
   justify-content: center
-  width: 100%
-  height: 100%
-  color: whitee
-  webkit-animation: color-change-2x 4s linear alternate both
-  animation: color-change-2x 4s linear alternate both
+  color: white
+  font-family: Montserrat-Bold, sans-serif
+  font-size: 57px
+  letter-spacing: 2.85px
+  height: 100vh
+  width: 100vw
+  background: rgb(154,76,218)
+  background: linear-gradient(90deg, rgba(154,76,218,1) 0%, rgba(70,14,142,1) 100%)
+  z-index: 2
+  -webkit-animation: color-change-2x 3s linear alternate both
+  animation: color-change-2x 3s linear alternate both
 
 @-webkit-keyframes color-change-2x
   0%
     opacity: 1
-
   100%
     opacity: 0
 
-º
+
 @keyframes color-change-2x
   0%
     opacity: 1
-
   100%
     opacity: 0
-
-
 
 /* styles */
 
@@ -68,32 +49,36 @@ $nav-height: 232px
 
 .container-showcase-1
   padding-top: $nav-height
-  >.row:first-child
-    margin-bottom: 77px
-  >.row:nth-child(2)
-    margin-bottom: 171px
-
-.col-info
-  box-shadow: 0 3px 5px #48454D52
-  border: 1px solid #CFCFCF
-  border-radius: 49px
-  max-width: 536px
-  padding: 80px 82px 90px 82px
-  text-align: center
-  &-title
+  &__col
+    box-shadow: 0 3px 5px #48454D52
+    border: 1px solid #CFCFCF
+    border-radius: 49px
+    max-width: 536px
+    padding: 80px 82px 90px 82px
+    text-align: center
+  &__title
     color: $lup-violet-dark
     font-size: 40px
     font-family: Montserrat-Bold, sans-serif
     letter-spacing: 0.68px
     margin-bottom: 42px
-  &-subtitle
+  &__subtitle
     color: $lup-violet
     font-family: 'Open Sans', sans-serif
     font-size: 30px
     letter-spacing: 0.36px
     margin-bottom: 52px
+  &__question
+    letter-spacing: 0.43px
+    font-size: 29px
+    font-family: Montserrat-Bold, sans-serif
+  >.row:first-child
+    margin-bottom: 77px
+  >.row:nth-child(2)
+    margin-bottom: 171px
 
 .container-showcase-2
+  margin-bottom: 171px
   &__title
     color: #7B2CBF
     font-family: Montserrat-Bold, sans-serif
@@ -101,3 +86,90 @@ $nav-height: 232px
     letter-spacing: 0.68px
     max-width: 640px
     margin-bottom: 63.4px
+  &__subtitle
+    font-family: "Open Sans", sans-serif
+    font-size: 28px
+
+.container-showcase-3
+  &__title
+    font-family: Montserrat-Bold, sans-serif
+    font-size: 43px
+    letter-spacing: 0
+    margin-bottom: 62px
+  &__subtitle
+    font-family: 'Open Sans', sans-serif
+    font-size: 28px
+    letter-spacing: 0.34px
+
+.container-showcase-4
+  font-family: Montserrat-Bold, sans-serif
+  letter-spacing: 0px
+  margin-bottom: 182px
+  &__title
+    font-size: 45px
+    max-width: 772px
+  &__subtitle
+    font-size: 22px
+
+.container-showcase-5
+  &__title
+    font-family: Montserrat-Bold
+    font-size: 54px
+    margin-bottom: 110px
+
+.step-container
+  display: flex
+  flex-direction: column
+  justify-content: center
+
+.step
+  display: flex
+  align-self: center
+  margin-bottom: 64px
+  &__icon
+    background: red
+    width: 135px
+    min-width: 135px
+    margin-right: 80px
+    height: 135px
+  &__text
+    max-width: 540px
+  &__title
+    color: $lup-violet-light
+    letter-spacing: 0.41px
+    font-size: 33px
+    font-family: Montserrat-Bold, sans-serif
+    margin-bottom: 38px
+
+  &__description
+    color: $lup-dark-grey
+    font-size: 30px
+    font-family: "Open Sans", sans-serif
+    letter-spacing: 0.49px
+
+.row-special-step
+  &__header
+    font-family: Montserrat-Bold
+    font-size: 29px
+    margin: 60px 0 86px 0
+    padding-right: 268px
+
+.row-special-step-violet
+  background: transparent linear-gradient(300deg, #460E8E 0%, #9D4EDD 100%) 0% 0% no-repeat padding-box
+  .row-special-step__header
+    color: white
+  .step__title, .step__description
+    color: white
+
+.container-showcase-7
+  background: transparent linear-gradient(314deg, #460E8E 0%, #9D4EDD 100%) 0% 0% no-repeat padding-box
+  padding-top: 133px
+  color: white
+  &__title
+    font-family: Montserrat-Bold, sans-serif
+    font-size: 68px
+    margin-bottom: 58px
+  &__subtitle
+    font-family: "Open Sans", sans-serif
+    font-size: 47px
+    margin-bottom: 180px
