stable initial page

--- a/src/app/landing/landing.component.sass
+++ b/src/app/landing/landing.component.sass
@@ -1,5 +1,4 @@
-.modal-content
-  position: relative
+
 
 .logo
   height: 100vh
@@ -84,13 +83,13 @@ $nav-height: 232px
     font-family: Montserrat-Bold, sans-serif
     font-size: 45px
     letter-spacing: 0.68px
-    max-width: 640px
     margin-bottom: 63.4px
   &__subtitle
     font-family: "Open Sans", sans-serif
     font-size: 28px
 
 .container-showcase-3
+  margin-bottom: 213px
   &__title
     font-family: Montserrat-Bold, sans-serif
     font-size: 43px
@@ -103,17 +102,16 @@ $nav-height: 232px
 
 .container-showcase-4
   font-family: Montserrat-Bold, sans-serif
-  letter-spacing: 0px
+  letter-spacing: 0
   margin-bottom: 182px
   &__title
     font-size: 45px
-    max-width: 772px
   &__subtitle
     font-size: 22px
 
 .container-showcase-5
   &__title
-    font-family: Montserrat-Bold
+    font-family: Montserrat-Bold, sans-serif
     font-size: 54px
     margin-bottom: 110px
 
@@ -149,7 +147,7 @@ $nav-height: 232px
 
 .row-special-step
   &__header
-    font-family: Montserrat-Bold
+    font-family: Montserrat-Bold, sans-serif
     font-size: 29px
     margin: 60px 0 86px 0
     padding-right: 268px
@@ -173,3 +171,13 @@ $nav-height: 232px
     font-family: "Open Sans", sans-serif
     font-size: 47px
     margin-bottom: 180px
+
+.container-showcase-8
+  background: transparent linear-gradient(281deg, #460E8E 0%, #9D4EDD 100%) 0% 0% no-repeat padding-box
+  height: 190px
+  letter-spacing: 0.88px
+  font-family: "Open Sans", sans-serif
+  font-size: 35px
+  color: white
+  .col-12
+    padding-top: 70px
