--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,15 +1,38 @@
+<!-- Button trigger modal -->
+<button #openWelcomeModal type="button" id="openWelcomeModal" class="btn btn-primary hidden" data-bs-toggle="modal" data-bs-target="#welcomeModal"></button>
 <nav class="navbar navbar-light fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-        Launch static backdrop modal
-      </button>
+      <form [formGroup]="profileForm" class="lup-form" (ngSubmit)="onSubmit()">
+        <div class="row">
+          <div class="col-6 text-end">
+            <label for="name">Nombre completo</label>
+          </div>
+          <div class="col-6">
+            <input id="name" type="text" formControlName="name">
+          </div>
+        </div>
+
+        <label for="cellphone">Last Name</label>
+        <input id="cellphone" type="text" formControlName="cellphone">
+
+        <label for="email">E-mail</label>
+        <input id="email" type="text" formControlName="email" [email]="true">
+
+        <label for="country">País</label>
+        <input id="country" type="text" formControlName="country">
+
+        <label for="address">Dirección</label>
+        <input id="address" type="text" formControlName="address">
 
 
+        <button type="submit">Submit</button>
+      </form>
     </a>
   </div>
 </nav>
+
+
 
 <div class="container container-showcase-1">
   <div class="row">
@@ -18,7 +41,7 @@
         <p>Obtén tus paneles solares con <span class="color-lup--yellow">0</span> pesos</p>
       </div>
       <div class="container-showcase-1__subtitle">
-        Financiando con nosotros tu proyecto
+        Financiando con<br/>nosotros tu proyecto
       </div>
       <button class="lup-btn">conoce más</button>
     </div>
@@ -29,18 +52,22 @@
     </div>
   </div>
 </div>
+
 <div class="container container-showcase-2 text-center">
   <div class="row">
     <div class="col-12 color-lup--violet container-showcase-2__title">
-      Realizamos la inversión necesaria para que tú aproveches los beneficios
+      Realizamos la inversión<br/>
+      necesaria para que tú<br/>
+      aproveches los beneficios
     </div>
     <div class="col-12 container-showcase-2__subtitle">
-      <p>En <span class="color-lup--violet">Evolti</span> nos interesa impulsar un nuevo escenario para la
-      sostenibilidad, poniendo al alcance de todos una nueva forma de
+      <p>En <span class="color-lup--violet"><strong>Evolti</strong></span> nos interesa impulsar un nuevo escenario para la<br/>
+      sostenibilidad, poniendo al alcance de todos una nueva forma de<br/>
         desarrollar <span class="color-lup--yellow">proyectos solares.</span></p>
     </div>
   </div>
 </div>
+
 <div class="container container-showcase-3">
   <div class="row text-center">
     <div class="col-12 container-showcase-3__title">
@@ -52,11 +79,11 @@
   </div>
   <div class="row">
     <div class="col-12 col-sm-6"></div>
-    <div class="col-12 col-sm-6">
+    <div class="col-12 col-sm-5">
       <div class="color-lup--violet container-showcase-3__title">Sin inversión inicial</div>
       <div class="container-showcase-3__subtitle">
         <p>Sabemos que cada peso cuenta, en Evolti
-          te ofrecemos obtener tu proyecto solar
+          te ofrecemos obtener tu proyecto solar a
           <span class="color-lup--yellow"><b>costo cero</b></span>
         </p>
       </div>
@@ -64,11 +91,11 @@
   </div>
   <div class="row">
     <div class="col-12 col-sm-6 text-end">
-      <div class="color-lup--violet container-showcase-3__title">
+      <div class="color-lup--violet-light container-showcase-3__title">
         Cero riesgo de instalación
       </div>
       <div class="container-showcase-3__subtitle">
-        <p>Nos aseguramos de contar con un instalador
+        <p>Nos aseguraremos de contar con un instalador
           confiable y seguro que garantice la más <span class="color-lup--yellow">alta calidad</span> de tus paneles
         </p>
       </div>
@@ -81,7 +108,9 @@
   <div class="row">
     <div class="col-12">
       <div class="color-lup--violet-light container-showcase-4__title">
-        Con evolti da el siguiente paso para conventirte en un amigo del planeta
+        Con evolti da el siguiente paso<br/>
+        para conventirte en un amigo<br/>
+        del planeta
       </div>
     </div>
     <div class="col-12"></div>
@@ -98,6 +127,7 @@
     </div>
   </div>
 </div>
+
 <div class="container-fluid container-showcase-6">
   <div class="row">
     <div class="step-container">
@@ -146,6 +176,12 @@
       <div class="step">
         <div class="step__icon"></div>
         <div class="step__text">
+          <div class="step__title">Finalizada la fase de operación, evolti te entregará tu sistema solar</div>
+        </div>
+      </div>
+      <div class="step">
+        <div class="step__icon"></div>
+        <div class="step__text">
           <div class="step__title">De ahí en adelante tú eres el dueño</div>
           <div class="step__description">Disfrutando la energía limpia, renovable y gratuita del sol</div>
         </div>
@@ -153,6 +189,7 @@
     </div>
   </div>
 </div>
+
 <div class="container-showcase-7 text-center">
   <div class="row">
     <div class="col-12 container-showcase-7__title">
@@ -167,16 +204,20 @@
     </div>
   </div>
 </div>
-
+<div class="container-fluid container-showcase-8">
+  <div class="row text-center">
+    <div class="col-12 col-md-4">Términos y condiciones</div>
+    <div class="col-12 col-md-4">312-234-4556</div>
+    <div class="col-12 col-md-4">evolti@evolti.com</div>
+  </div>
+</div>
 
 <!-- Modal -->
-<div class="modal" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal" id="welcomeModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-fullscreen">
     <div class="modal-content">
-      <div class="logo"></div>
-      <div class="text">
-        Bienvenido
-      </div>
+      <app-welcome-modal (onClosedModal)="closeModal()"></app-welcome-modal>
+      <button #closeWelcomeModal type="button" data-bs-dismiss="modal"></button>
     </div>
   </div>
 </div>
