--- a/src/app/flux-choice/flux-choice.component.sass
+++ b/src/app/flux-choice/flux-choice.component.sass
@@ -19,6 +19,7 @@
   &__options
     @include flex-center
     justify-content: center
+    margin-bottom: 192px
   &__option
     @include flex-center
     flex-direction: column
@@ -37,6 +38,7 @@
       background: transparent linear-gradient(90deg, #460E8E 0%, #9D4EDD 100%) 0% 0% no-repeat padding-box
   &__link
     @include font-styles
+    cursor: pointer
     margin-top: 23px
     text-decoration: none
     &--yellow
