--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -49,7 +49,6 @@ $lup-dark-grey: #505050
     color: $lup-violet-dark
 
 // colours
-
 .color-lup--violet
   color: $lup-violet-dark
 
@@ -169,4 +168,25 @@ p
     transform: translateX(0)
     opacity: 1
 
+.rotate-center
+  -webkit-animation: rotate-center 2s infinite both
+  animation: rotate-center 2s infinite both
+
+@-webkit-keyframes rotate-center
+  0%
+    -webkit-transform: rotate(0)
+    transform: rotate(0)
+
+  100%
+    -webkit-transform: rotate(360deg)
+    transform: rotate(360deg)
+
+@keyframes rotate-center
+  0%
+    -webkit-transform: rotate(0)
+    transform: rotate(0)
+
+  100%
+    -webkit-transform: rotate(360deg)
+    transform: rotate(360deg)
 
