--- a/src/app/initial-data/initial-data.component.sass
+++ b/src/app/initial-data/initial-data.component.sass
@@ -7,7 +7,7 @@
     height: 100vh
     width: 100vw
 
-.initial-data__first-screen, .initial-data__second-screen
+.initial-data__screen-1, .initial-data__screen-2
   background: transparent linear-gradient(270deg, #510CA8 0%, #2B054A 100%) 0% 0% no-repeat padding-box
   display: flex
   flex-direction: column
@@ -16,34 +16,18 @@
   // if you need to disable these screens
   // display: none
 
-.initial-data__first-screen
+.initial-data__screen-0, .initial-data__screen-2
+  display: flex
+  flex-direction: column
+  z-index: 1000
+
+.initial-data__screen-1
   z-index: 10
-  &__icon
-    background: red
-    height: 100px
-    width: 100px
-  &__title
-    font-family: Montserrat-Bold, sans-serif
-    color: white
-    font-size: 50px
-  &__btn
-    width: 70%
 
-.initial-data__second-screen
+.initial-data__screen-2
   z-index: 9
-  color: white
-  &__icon
-    height: 100px
-    width: 100px
-    background: red
-  &__title
-    font-size: 50px
-    font-family: Montserrat-Bold, sans-serif
-  &__subtitle
-    font-size: 40px
-    font-family: "Open Sans", sans-serif
 
-.initial-data__third-screen
+.initial-data__screen-3
   // if you want to disable this screen
   // display: none
   background: white
@@ -67,7 +51,7 @@
       width: 200px
       height: 200px
 
-.initial-data__fourth-screen
+.initial-data__screen-4
   z-index: 7
 
 // overrides
