--- a/src/app/initial-data/initial-data.component.sass
+++ b/src/app/initial-data/initial-data.component.sass
@@ -52,7 +52,12 @@
       height: 200px
 
 .initial-data__screen-4
+  background: white
   z-index: 7
+
+.initial-data__screen-5
+  background: white
+  z-index: 6
 
 // overrides
 .lup-form__input
